tests/bad/badvartype_int.alp
function void main(<string> args):
    int x
    x = 1
    not x
end
